--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
     <meta content="true" name="HandheldFriendly">
     <meta content="width" name="MobileOptimized">
     <meta content="indonesia" name="language">
-    <link rel="preload" as="image" href="banner-grand-jackpot-slot88.png"/>
+    <link rel="preload" as="image" href="https://adfs.sse.com/banner-grand-jackpot-slot88.png"/>
     <meta name="supported-amp-formats" content="websites,stories,ads,email">
     <!-- Twitter -->
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="DAFTAR SITUS SLOT TERBARU BONUS NEW MEMBER 100 TO X3 X5 X7 X8 X10 100% DI DEPAN">
     <meta name="twitter:description" content="TNTSLOT ADALAH KUMPULAN SLOT BONUS NEW MEMBER 100% DI AWAL TO KECIL DEPO 20 BONUS 20  25 BONUS 25 30 BONUS 30 50 BONUS 50 DAN 100 BONUS 100.">
-    <meta name="twitter:image:src" content="banner-grand-jackpot-slot88.png">
+    <meta name="twitter:image:src" content="https://adfs.sse.com/banner-grand-jackpot-slot88.png">
     <meta name="og:title" content="DAFTAR SITUS SLOT TERBARU BONUS NEW MEMBER 100 TO X3 X5 X7 X8 X10 100% DI DEPAN">
     <meta name="og:description" content="TNTSLOT ADALAH KUMPULAN SLOT BONUS NEW MEMBER 100% DI AWAL TO KECIL DEPO 20 BONUS 20  25 BONUS 25 30 BONUS 30 50 BONUS 50 DAN 100 BONUS 100.">
-    <meta name="og:image" content="banner-grand-jackpot-slot88.png">
+    <meta name="og:image" content="https://adfs.sse.com/banner-grand-jackpot-slot88.png">
     <meta property="og:image:width" content="600">
     <meta property="og:image:height" content="200">
     <meta name="og:url" content="https://adfs.sse.com/">
@@ -61,7 +61,7 @@
           "name": "bonus",
           "alternateName": "bonus",
           "url": "https://adfs.sse.com/",
-          "logo": "https://adfs.sse.com/logo-slot88.png",
+          "logo": "https://adfs.sse.com/https://adfs.sse.com/logo-slot88/.png",
           "sameAs": "https://adfs.sse.com/"
         }
     </script>
@@ -88,7 +88,7 @@
       "name": "bonus",
       "logo": {
       "@type": "ImageObject",
-      "url": "https://adfs.sse.com/logo-slot88.png"
+      "url": "https://adfs.sse.com/https://adfs.sse.com/logo-slot88/.png"
       }
       }
     }
@@ -127,7 +127,7 @@
                 <div class="col-md-12 text-center">
                     <div class="amanku">
                         <span itemscope="itemscope" itemtype="http://schema.org/Brand"><a itemprop="url" href="https://adfs.sse.com/" title="logo slot88">
-                        <amp-img src="logo-slot88.png" alt="logo slot88" width="250" height="65"></amp-img>
+                        <amp-img src="https://adfs.sse.com/logo-slot88/.png" alt="logo slot88" width="250" height="65"></amp-img>
                         <meta itemprop="name" content="logo slot88"></a></span>
                     </div>
                 </div>
@@ -173,7 +173,7 @@
     </div>
 	<div class="container">
         <div class="slide mt-2">
-            <amp-img src="banner-grand-jackpot-slot88.png" width="1280px" height="512px" layout="responsive" title="slot88 terpercaya" alt="slot88 terpercaya"></amp-img>
+            <amp-img src="https://adfs.sse.com/banner-grand-jackpot-slot88.pngbanner-grand-jackpot-slot88.png" width="1280px" height="512px" layout="responsive" title="slot88 terpercaya" alt="slot88 terpercaya"></amp-img>
         </div><br>
         <div class="table">
             <table class="amanhardware" style="width:100%">
@@ -224,7 +224,7 @@
                         <p id="breadcrumbs"><span><span><a href="https://adfs.sse.com/" title="Home" target="_blank">Home</a> » <a href="https://adfs.sse.com/" title="Slot Online" target="_blank">Slot Online</a> » <strong class="breadcrumb_last" aria-current="page">DAFTAR SITUS SLOT TERBARU BONUS NEW MEMBER 100 TO X3 X5 X7 X8 X10 100% DI DEPAN</strong></span></span></p>
                         <hr/>
                         <div class="tron-images">
-                        <amp-img src="fafa-slot88.png" width="1500" height="610" layout="intrinsic" alt="Judi Online"></amp-img>
+                        <amp-img src="https://adfs.sse.com/fafa-slot88.png" width="1500" height="610" layout="intrinsic" alt="Judi Online"></amp-img>
                         </div>
                         <hr/>
                         <h1 itemprop="headline"><strong>TNTSLOT: SITUS SLOT TERBARU BONUS NEW MEMBER 100 TO X3 X5 X7 X8 X10 DI DEPAN</strong></h1>
@@ -331,23 +331,23 @@
     </div>
     <div class="fixed-footer">
         <a href="https://bit.ly/3vPPnpa" rel="nofollow noopener" target="_blank" class="wobble">
-            <amp-img layout="intrinsic" height="75" width="75" src="android-slot.svg" alt="Download APK SLOT88"></amp-img>
+            <amp-img layout="intrinsic" height="75" width="75" src="https://adfs.sse.com/android-slot.svg" alt="Download APK SLOT88"></amp-img>
             Download
         </a>
         <a href="https://bit.ly/3vPPnpa" rel="nofollow noopener" target="_blank">
-            <amp-img layout="intrinsic" height="75" width="75" src="bonus-slot.webp" alt="Bonus Promo SLOT88"></amp-img>
+            <amp-img layout="intrinsic" height="75" width="75" src="https://adfs.sse.com/bonus-slot.webp" alt="Bonus Promo SLOT88"></amp-img>
             Bonus
         </a>
         <a href="https://bit.ly/3vPPnpa" rel="nofollow noopener" target="_blank" class="tada">
-            <amp-img class="center" layout="intrinsic" height="50" width="50" src="user-slot.svg" alt="Daftar Slot Online SLOT88"></amp-img>
+            <amp-img class="center" layout="intrinsic" height="50" width="50" src="https://adfs.sse.com/user-slot.svg" alt="Daftar Slot Online SLOT88"></amp-img>
             Daftar
         </a>
         <a href="https://bit.ly/3vPPnpa" rel="nofollow noopener" target="_blank">
-            <amp-img layout="intrinsic" height="75" width="75" src="whatsapp-slot.svg" alt="whatsapp"></amp-img>
+            <amp-img layout="intrinsic" height="75" width="75" src="https://adfs.sse.com/whatsapp-slot.svg" alt="whatsapp"></amp-img>
             Whatsapp
         </a>
         <a href="https://bit.ly/3vPPnpa" rel="nofollow noopener" target="_blank" class="js_live_chat_link live-chat-link">
-            <amp-img class="live-chat-icon" layout="intrinsic" height="75" width="75" src="live-chat-slot.svg" alt="Live Chat"></amp-img>
+            <amp-img class="live-chat-icon" layout="intrinsic" height="75" width="75" src="https://adfs.sse.com/live-chat-slot.svg" alt="Live Chat"></amp-img>
             Live Chat
         </a>
     </div>
