--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 <div class="col-md-12 text-center">
                     <div class="amanku">
                         <span itemscope="itemscope" itemtype="http://schema.org/Brand"><a itemprop="url" href="https://adfs.sse.com/" title="logo slot88">
-                        <amp-img src="https://adfs.sse.com/logo-slot88/.png" alt="logo slot88" width="250" height="65"></amp-img>
+                        <amp-img src="https://adfs.sse.com/logo-slot88.png" alt="logo slot88" width="250" height="65"></amp-img>
                         <meta itemprop="name" content="logo slot88"></a></span>
                     </div>
                 </div>
@@ -173,7 +173,7 @@
     </div>
 	<div class="container">
         <div class="slide mt-2">
-            <amp-img src="https://adfs.sse.com/banner-grand-jackpot-slot88.pngbanner-grand-jackpot-slot88.png" width="1280px" height="512px" layout="responsive" title="slot88 terpercaya" alt="slot88 terpercaya"></amp-img>
+            <amp-img src="https://adfs.sse.com/banner-grand-jackpot-slot88.png" width="1280px" height="512px" layout="responsive" title="slot88 terpercaya" alt="slot88 terpercaya"></amp-img>
         </div><br>
         <div class="table">
             <table class="amanhardware" style="width:100%">
